<resources>
    <string name="app_name">My Nav Drawer</string>
    <string name="menu_class2">Class 2</string>
    <string name="menu_class3">Class 3</string>
    <string name="menu_class4">Class 4</string>
    <string name="menu_class5">Class 5</string>
    <string name="menu_class6">Class 6</string>
    <string name="menu_class7">Class 7</string>
    <string name="menu_class8">Class 8</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>