<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_class2"
        android:icon="@drawable/ic_filter_2_black_24dp"
        android:title="@string/menu_class2" />
    <item
        android:id="@+id/nav_class4"
        android:icon="@drawable/ic_filter_4_black_24dp"
        android:title="@string/menu_class4" />
    <item
        android:id="@+id/nav_class6"
        android:icon="@drawable/ic_filter_6_black_24dp"
        android:title="@string/menu_class6" />
    <item
        android:id="@+id/nav_class7"
        android:icon="@drawable/ic_filter_7_black_24dp"
        android:title="@string/menu_class7" />
    <item
        android:id="@+id/nav_class8"
        android:icon="@drawable/ic_filter_8_black_24dp"
        android:title="@string/menu_class8" />

</menu>